--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Trigger Automation</title>
     <script type="text/javascript">
         function triggerAutomation() {
-            window.location.href = "shortcuts://run-shortcut?name=Disable%20DND";
+            window.location.href = "shortcuts://run-shortcut?name=Menu";
         }
     </script>
 </head>
 <body onload="triggerAutomation()">
-    <p>If you are not redirected automatically, <a href="shortcuts://run-shortcut?name=Disable%20DND">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="shortcuts://run-shortcut?name=Menu">click here</a>.</p>
 </body>
 </html>
